# pronote2calendar

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  entrypoint.sh  pyproject.toml  renovate.json
.github/workflows/: ci.yml  publish-docker.yml
src/pronote2calendar/: change_detection.py  config_manager.py  create_credentials.py  date_utils.py  event_creator.py  google_calendar_client.py  logging_manager.py  main.py  models.py  notifications.py  pronote_client.py  settings.py  subject_adjustments.py  time_adjustments.py
tests/: test_change_detection.py  test_date_utils.py  test_event_creator.py  test_main_apply_changes.py  test_notifications.py  test_pronote_client.py  test_settings.py  test_subject_adjustments.py  test_time_adjustments.py
