[project]
name = "pronote2calendar"
version = "0.3.0"
description = "A simple tool to export your Pronote timetable to Google Calendar for easy access and integration with other apps."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pronotepy (==2.14.5)",
    "google-api-python-client (==2.187.0)",
    "pydantic-settings[yaml] (==2.12.0)",
    "email-validator (==2.3.0)",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["uv_build==0.9.14"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black (==25.11.0)",
    "flake8 (==7.3.0)",
    "flake8-bugbear (==25.11.29)",
    "mypy (==1.19.0)",
    "isort (==7.0.0)",
    "pytest (==9.0.1)",
]
