[project]
name = "pronote2calendar"
version = "0.4.0"
description = "A simple tool to export your Pronote timetable to Google Calendar for easy access and integration with other apps."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pronotepy (==2.14.5)",
    "google-api-python-client (==2.187.0)",
    "pydantic-settings[yaml] (==2.12.0)",
    "email-validator (==2.3.0)",
    "jinja2 (==3.1.6)",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[build-system]
requires = ["uv_build==0.9.17"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy (==1.19.0)",
    "pytest (==9.0.1)",
    "ruff (==0.14.8)",
]
